@@ -47,6 +47,10 @@ Version 2.0-dev (CVS)
 
 - Fixed deprecated warnings generated by mitab.h (bug 1907)
 
+- Fixed multi-line text rendering (bug 1916) 
+
+- Fixed multi-line text height problem (bug 1919)
+ 
 Version 1.7.0-beta1 (2007-02-29)
 --------------------------------
 
@@ -908,5 +912,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.212 2008-07-03 17:57:24 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.213 2008-07-14 16:09:10 aboudreault Exp $
 ------------
